# unification-fd

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  LICENSE  README  README.md  TODO  VERSION  stack.yaml  unification-fd.cabal  unification.cabal
.github/: dependabot.yml
.github/workflows/: ci.yml
latex/: Makefile  unification-intro-mcmaster.tex  unification-intro-slides.tex  unification-opt-mcmaster.lhs  unification-optimize-slides.lhs
src/Control/: Unification.hs
src/Control/Monad/: EitherK.hs  MaybeK.hs
src/Control/Monad/State/: UnificationExtras.hs
src/Control/Unification/: Classes.hs  IntRVar.hs  IntVar.hs  Ranked.hs  STRVar.hs  STVar.hs  Types.hs
src/Control/Unification/Ranked/: IntVar.hs  STVar.hs
src/Data/Function/: Pointless.hs
src/Data/Functor/: Coproduct.hs  Fixedpoint.hs
test/: Test1.hs
test/bench/Control/: Unification.hs
test/bench/Control/Unification/: Classes.hs  IntVar.hs  STVar.hs
test/bench2/: Codensity-Lib=K.html  Codensity-Lib=Mb.html  Codensity.hs  Codensity.html
test/correctness/: Test1.hs  TestInteractive.hs
test/experiments/feature-structures/: FeatureStructure.hs
test/experiments/putting/: PuttingDM.hs  PuttingHR.hs  PuttingHRPlus.hs
test/experiments/st-trail/Control/Monad/: BacktrackST.hs
test/experiments/unionfind/Control/: Unification.hs
test/experiments/unionfind/Control/Unification/: Classes.hs
test/tutorial/: tutorial1.hs  tutorial1.html
