----------------------------------------------------------------
-- wren ng thornton <wren@community.haskell.org>    ~ 2011.06.30
----------------------------------------------------------------

Name:           unification-fd
Version:        0.4.0
-- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
-- and source-repository:.
Cabal-Version:  >= 1.6
Build-Type:     Simple
Stability:      experimental
Copyright:      Copyright (c) 2007--2011 wren ng thornton
License:        BSD3
License-File:   LICENSE
Author:         wren ng thornton
Maintainer:     wren@community.haskell.org
Homepage:       http://code.haskell.org/~wren/
Category:       Algebra, Unification
Synopsis:       Simple generic unification algorithms.
Description:    Simple generic unification algorithms.

Source-Repository head
    Type:     darcs
    Location: http://community.haskell.org/~wren/unification

----------------------------------------------------------------
Flag base4
    Default:     True
    Description: base-4.0 emits "Prelude deprecated" messages in
                 order to get people to be explicit about which
                 version of base they use.

Flag splitBase
    Default:     True
    Description: base-3.0 (GHC 6.8) broke out the packages: array,
                 bytestring, containers, directory, old-locale,
                 old-time, packedstring, pretty, process, random.

----------------------------------------------------------------
Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Data.Functor.Fixedpoint
                   , Control.Monad.State.UnificationExtras
                   , Control.Monad.BacktrackST
                   , Control.Monad.MaybeK
                   , Control.Monad.EitherK
                   , Control.Unification.Classes
                   , Control.Unification.STVar
                   , Control.Unification.IntVar
                   , Control.Unification
    
    Build-Depends:   transformers >= 0.2.0
                   , logict       >= 0.4
                   -- Require a version of base with Applicative.
                   -- We refuse to do without it any longer.
                   , base         >= 2.0
                   -- Require mtl-2 instead of monads-fd; because
                   -- otherwise we get a clash mixing logict with
                   -- StateT. And we want stuff from monads-fd, so
                   -- we can't just fail over to the older mtl.
                   , mtl          >= 2.0
    
    -- This is for the stray CPS in Control.Monad.EitherK
    Cpp-Options: -D__APPLICATIVE_IN_BASE__
    
    if flag(base4)
        Build-Depends: base >= 4 && < 5
    else
        Build-Depends: base < 4
    
    if flag(splitBase)
        Build-depends: base >= 3.0, containers
    else
        Build-depends: base < 3.0

----------------------------------------------------------------
----------------------------------------------------------- fin.
