Cabal-Version:  2.2
-- Cabal >=2.2 is required for:
--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
-- Since 2.1, the Cabal-Version must be the absolutely first thing
-- in the file, even before comments.  Also, no longer uses ">=".
--    <https://github.com/haskell/cabal/issues/4899>

----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2024-08-29
----------------------------------------------------------------

Name:           unification-fd
Version:        0.11.2.3
Build-Type:     Simple
Stability:      experimental
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/unification-fd/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      2007–2024 wren romano
-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
License:        BSD-3-Clause
License-File:   LICENSE

Category:       Algebra, Algorithms, Compilers/Interpreters, Language, Logic, Unification
Synopsis:       Simple generic unification algorithms.
Description:
    Generic functions for single-sorted first-order structural
    unification (think of programming in Prolog, or of the metavariables
    in type inference).

Extra-source-files:
    AUTHORS, README.md, CHANGELOG

-- This package is fairly simple in terms of language requirements,
-- and (with minor alterations to deal with changes to the 'Monoid'
-- and 'Functor' classes) should work for ancient versions of GHC
-- (e.g., 7.4).  However, we no longer verify backwards compatibility
-- beyond the versions listed below.
-- <https://github.com/wrengr/unification-fd/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1,
    GHC ==9.2.4,
    GHC ==9.4.8,
    GHC ==9.6.5,
    GHC ==9.8.2,
    GHC ==9.10.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/unification-fd.git

----------------------------------------------------------------
Library
    -- With Cabal-Version: >= 1.10, the Default-Language field is now required.
    Default-Language: Haskell98
    Hs-Source-Dirs:  src
    Exposed-Modules: Data.Functor.Fixedpoint
                   , Control.Monad.State.UnificationExtras
                   , Control.Monad.MaybeK
                   , Control.Monad.EitherK
                   , Control.Unification
                   , Control.Unification.Types
                   , Control.Unification.STVar
                   , Control.Unification.IntVar
                   , Control.Unification.Ranked
                   , Control.Unification.Ranked.STVar
                   , Control.Unification.Ranked.IntVar

    -- To keep the stdlibs matching the Tested-With bounds above, see:
    -- <https://gitlab.haskell.org/ghc/ghc/-/wikis/commentary/libraries/version-history>
                 -- N.B., Tasty requires base>=4.5.0.0
    Build-Depends: base         >= 4.9   && < 4.21
                 , containers   >= 0.5.7 && < 0.8
                 -- Require mtl-2 instead of monads-fd; because
                 -- otherwise we get a clash mixing logict with
                 -- StateT. And we want stuff from monads-fd, so
                 -- we can't just fail over to the older mtl.
                 , mtl          >= 2.0 && < 2.4
                 -- N.B., logict 0.7.1 introduced breakage, but that
                 -- should be resolved now. Cf.,
                 -- <https://github.com/Bodigrim/logict/issues/20#issuecomment-774528439>
                 -- <https://github.com/wrengr/unification-fd/issues/14>
                 , logict       >= 0.4 && < 0.8.2

----------------------------------------------------------------
----------------------------------------------------------- fin.
