Cabal-Version:  2.2
-- Cabal >=2.2 is required for:
--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
-- Since 2.1, the Cabal-Version must be the absolutely first thing
-- in the file, even before comments.  Also, no longer uses ">=".
--    <https://github.com/haskell/cabal/issues/4899>

----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2024-08-30
----------------------------------------------------------------

Name:           unification-fd
Version:        0.12.0
Build-Type:     Simple
Stability:      experimental
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/unification-fd/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      2007–2024 wren romano
-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
License:        BSD-3-Clause
License-File:   LICENSE

Category:       Algebra, Algorithms, Compilers/Interpreters, Language, Logic, Unification
Synopsis:       Simple generic unification algorithms.
Description:
    Generic functions for single-sorted first-order structural
    unification (think of programming in Prolog, or of the metavariables
    in type inference).

Extra-source-files:
    AUTHORS, README.md, CHANGELOG

-- Because of data-fix, we can no longer support GHC older than 8.6.1
-- <https://github.com/wrengr/unification-fd/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1,
    GHC ==9.2.4,
    GHC ==9.4.8,
    GHC ==9.6.5,
    GHC ==9.8.2,
    GHC ==9.10.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/unification-fd.git

----------------------------------------------------------------
Library
    -- With Cabal-Version: >= 1.10, the Default-Language field is now required.
    Default-Language: Haskell98
    Hs-Source-Dirs:  src
    Exposed-Modules: Data.Functor.Fixedpoint
                   , Control.Monad.State.UnificationExtras
                   , Control.Monad.MaybeK
                   , Control.Monad.EitherK
                   , Control.Unification
                   , Control.Unification.Types
                   , Control.Unification.STVar
                   , Control.Unification.IntVar
                   , Control.Unification.Ranked
                   , Control.Unification.Ranked.STVar
                   , Control.Unification.Ranked.IntVar

    -- TODO: Although most versions of mtl don't really care much
    -- about the version of base, the latest version (mtl-2.3.1) is
    -- exceptional in that they explicitly exclude base>=4.15&&<4.16.
    -- We should look into why, just in case that affects us too.
    --
    -- To keep the core libs matching the Tested-With bounds above, see:
    -- <https://gitlab.haskell.org/ghc/ghc/-/wikis/commentary/libraries/version-history>
    Build-Depends: base         >= 4.12  && < 4.21
                 , containers   >= 0.6.0 && < 0.8
                 -- Require mtl-2 instead of monads-fd; because
                 -- otherwise we get a clash mixing logict with
                 -- StateT. And we want stuff from monads-fd, so
                 -- we can't just fail over to the older mtl.
                 --
                 -- NOTE: ghc>=8.4.1 ships with mtl>=2.2.2, so that's where
                 -- our lower bound comes from (but any mtl>=2.0 should work).
                 , mtl          >= 2.2.2 && < 2.4
                 -- NOTE: logict-0.7.1 introduced breakage, but that
                 -- should be resolved now. Cf.,
                 -- <https://github.com/Bodigrim/logict/issues/20#issuecomment-774528439>
                 -- <https://github.com/wrengr/unification-fd/issues/14>
                 , logict       >= 0.4   && < 0.8.2
                 -- FIXME: What all changed between 0.3.2 and 0.3.4?  And why does my current GHC not want to try 0.3.4?
                 , data-fix     >= 0.3.2 && < 0.4

----------------------------------------------------------------
----------------------------------------------------------- fin.
